    - Fixed UI state in `GlobalStatus.tsx` so users can resume the queue after it has been stopped.
    - Added comprehensive unit tests for `pause`, `stop`, `resume`, and `empty` in `tests/frontier.test.ts`.

Feb 21, 2026
Developer: Reynaldo 
- Advanced Processing & Scale Foundation:
    - Added `puppeteer` dependency for headless browser rendering.
    - Implemented `RendererAgent` to execute JavaScript and render dynamic Single Page Applications (SPAs).
    - Updated `FetcherAgent` with a heuristic to detect suspected SPAs and route them to the `RendererAgent`.
    - Added resource blocking (images, media, fonts, css) in `RendererAgent` to optimize rendering speed.
    - Implemented memory leak protection in `RendererAgent` by automatically restarting the browser context every 50 requests.
    - Updated `config.ts` to include `USE_RENDERER` environment variable.
    - Added `tests/renderer.test.ts` to verify SPA rendering and network idle waiting.
    - Updated orchestrator (`src/index.ts`) to gracefully initialize and close the `RendererAgent`.

-  Deduplicate Content:
    - Added `simhash-js` dependency for content fingerprinting.
    - Updated `DuplicateEliminator` to compute Simhash for extracted text and detect near-duplicates by calculating Hamming distance against recently stored content.
    - Updated `ParserAgent` to correctly extract clean body text, ignoring `script` and `style` tags, for accurate deduplication.
    - Integrated duplicate content checking within `FetcherAgent` to efficiently drop mirror sites.
    - Updated `config.ts` to include `SIMHASH_THRESHOLD` environment variable.
    - Added and updated tests (`tests/eliminator.test.ts`, `tests/parser.test.ts`) to verify duplicate detection and robust text extraction.

- Spider Trap and Domain Restriction Filter:
    - Implemented Spider Trap Protector in `ParserAgent` (URL depth limits & Path-repetition detection algorithm).